# scylla-rust-driver-matrix

./: .gitignore  README.md  cluster.py  common.py  email_sender.py  main.py  processjunit.py  pyproject.toml  run.py
.github/workflows/: build-docker-image.yaml
report_templates/: report.html
scripts/: Dockerfile  entrypoint.sh  image  requirements.txt  run_test.sh
versions/scylla/v0.11.1/: ignore.yaml
versions/scylla/v0.12.0/: ignore.yaml
versions/scylla/v0.13.0/: ignore.yaml
versions/scylla/v1.1.0/: ignore.yaml
versions/scylla/v1.2.0/: ignore.yaml
versions/scylla/v1.3.0/: ignore.yaml
versions/scylla/v1.3.1/: nextest.patch
versions/scylla/v1.4.1/: ignore.yaml  nextest.patch  password-auth.patch  simple_strategy.patch
versions/scylla/v1.5.0/: ignore.yaml
versions/scylla/v1.6.0/: many_connections.patch
versions/scylla/v1.7.0/: ignore.yaml
